/*
SPDX-Copyright: Copyright (c) Capital One Services, LLC 
SPDX-License-Identifier: Apache-2.0 
Copyright [2018] Capital One Services, LLC 

Licensed under the Apache License, Version 2.0 (the "License"); 
you may not use this file except in compliance with the License. 
You may obtain a copy of the License at 

  http://www.apache.org/licenses/LICENSE-2.0 

Unless required by applicable law or agreed to in writing, software 
distributed under the License is distributed on an "AS IS" BASIS, 
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or 
implied. See the License for the specific language governing 
permissions and limitations under the License.
*/
syntax = "proto3";

package helloworld;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "somethingelse.proto";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  rpc SayHelloInMultipleLanguages (HelloMultipleLanguageRequest) returns (HelloMultipleLanguageReply) {}
  rpc SaySomethingElse (google.protobuf.Empty) returns (SomethingElseReply) {}
  rpc ErrorOut (ErrorOutRequest) returns (ErrorOutReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  string language = 2;
}

// The response message containing the greetings
message HelloReply {
  string greeting = 1;
  google.protobuf.Timestamp timestamp = 2;
}

// The request message containing the user's name in mulitple languages.
message HelloMultipleLanguageRequest {
  string name = 1;
  repeated string languages = 2;
}

// The response message containing the greetings
message HelloMultipleLanguageReply {
  repeated string greetings = 1;
  google.protobuf.Timestamp timestamp = 2;
}

// The request message that errors
message ErrorOutRequest {
}

// The response message that errors
message ErrorOutReply {
}